fixed alignment on index page

--- a/style.css
+++ b/style.css
@@ -1,11 +1,3 @@
-.col-md-6 {
-    margin-left: 30%;
-    margin-top: 10%;
-
-}
-
-
-
 .float-left {
     padding-right: 10px;
 }
@@ -18,7 +10,9 @@ h1 {
 .jumbotron,
 .display-4 {
     height: auto;
+    width: 100%;
     font-family: 'Mr Dafoe', cursive;
+
 
 
 }
@@ -33,8 +27,13 @@ img {
 }
 
 .container-fluid {
-    width: 40%;
     background-color: rgb(215, 215, 245);
+}
+
+.container-fluid,
+.container {
+    width: 40%;
+
     margin-top: 5%;
     padding: 5px;
     margin-bottom: 2%;
@@ -52,4 +51,5 @@ body {
     html {
         font-size: 55%;
     }
+
 }
